--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
-title: XM Firmware Updater
+title: HyperOS Downloader
 layout: index
 permalink: /
 ---
 <section id="main" class="container-fluid">
 	<div class="box special">
 		<header class="major">
-			<h3 data-ref="xfu_more1">Introducing the ultimate tool
+			<h3 data-ref="xfu_more1">Collection of MIUI & HyperOS roms
 				<br />
-				that provides firmware packages for <a href="/supported/" target="_blank">all</a> XM devices
+				that provides ROM packages for <a href="/supported/" target="_blank">all</a> Xiaomi,Redmi,POCO devices
 			</h3>
 			<p data-ref="xfu_more2">An automated tool, running all the day watching for new updates, then
 				extract firmware from official ROMs, Global, Europe, India and China, and uploads it to hosting servers.
